--- a/caccf.css
+++ b/caccf.css
@@ -27,7 +27,7 @@ body {
 }
 
 :root {
-  --dark-blue: #143774;
+  --dark-blue: #2975ae;
   --light-blue: #1792d2;
   --white: #ffffff;
   --gray: #f8f8f8;
@@ -159,6 +159,25 @@ header ul li a {
   text-decoration: none;
   transition: 0.3s ease;
   font-weight: 500;
+}
+
+header ul li ul {
+  position: absolute;
+  left: 0;
+  width: 80px;
+  background-color: var(--dark-blue);
+  display: none;
+}
+
+header ul li:hover ul {
+  display: block;
+}
+
+header ul li ul li {
+  position: relative;
+  width: 100%;
+  text-align: center;
+  padding: 6px 3px;
 }
 
 header ul li a:hover {
@@ -313,7 +332,7 @@ li {
   width: 100%;
   height: 100%;
   /* background: #143774; */
-  background-image: url("images/counter-app.png");
+  background-image: url("assets/evangelism\ unit.jpg");
   background-position: center;
   background-size: cover;
   transition: 0.5s;
@@ -331,7 +350,7 @@ li {
   width: 100%;
   height: 100%;
   /* background: #143774; */
-  background-image: url("images/movie-app.jpg");
+  background-image: url("assets/drama\ group\ pic.jpg");
   background-position: center;
   background-size: cover;
   transition: 0.5s;
@@ -349,7 +368,7 @@ li {
   width: 100%;
   height: 100%;
   /* background: #143774; */
-  background-image: url("images/ui1.png");
+  background-image: url("assets/tech\ unit\ \(group\ pic\).jpg");
   background-position: center;
   background-size: contain;
   transition: 0.5s;
